--- a/src/app/features/global-store/material-wise/material-wise.component.html
+++ b/src/app/features/global-store/material-wise/material-wise.component.html
@@ -28,24 +28,62 @@
           </div>
         </span>
         <span class="mat-cell maxwidth-20 text-center">
-          {{ material.GlobalMaterial.estimatedQty }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span>
+          <div class="row">
+            <div class="col-xs-6 text-right p-r-0">
+              <span class="p-r-5"> {{ material.GlobalMaterial.estimatedQty }}</span>
+            </div>
+            <div class="col-xs-6 text-left p-l-0">
+              <span>{{ material.GlobalMaterial.materialUnit }}</span>
+            </div>
+          </div>
         </span>
-        <span class="mat-cell maxwidth-20 text-center"
-          >{{ material.GlobalMaterial.sum }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
-        >
+        <span class="mat-cell maxwidth-20 text-center">
+          <div class="row">
+            <div class="col-xs-6 text-right p-r-0">
+              <span class="p-r-5"> {{ material.GlobalMaterial.sum }}</span>
+            </div>
+            <div class="col-xs-6 text-left p-l-0">
+              <span>{{ material.GlobalMaterial.materialUnit }}</span>
+            </div>
+          </div>
+        </span>
         <span class="mat-cell maxwidth-20 text-center">{{ material.GlobalMaterial.nearDueDate | date: "dd MMM yyy" }}</span>
-        <span class="mat-cell maxwidth-20 text-center"
-          >{{ material.GlobalMaterial.deliveredQty != null ? material.GlobalMaterial.deliveredQty : 0 }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
-        >
-        <span class="mat-cell maxwidth-20 text-center"
-          >{{ material.GlobalMaterial.issuedQty != null ? material.GlobalMaterial.issuedQty : 0 }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
-        >
-        <span class="mat-cell maxwidth-20 text-center"
-          >{{
-            material.GlobalMaterial.deliveredQty != null ? material.GlobalMaterial.deliveredQty - (material.GlobalMaterial.issuedQty ? material.GlobalMaterial.issuedQty : 0) : 0
-          }}
-          <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
-        >
+        <span class="mat-cell maxwidth-20 text-center">
+          <div class="row">
+            <div class="col-xs-6 text-right p-r-0">
+              <span class="p-r-5">{{ material.GlobalMaterial.deliveredQty != null ? material.GlobalMaterial.deliveredQty : 0 }}</span>
+            </div>
+            <div class="col-xs-6 text-left p-l-0">
+              <span>{{ material.GlobalMaterial.materialUnit }}</span>
+            </div>
+          </div>
+        </span>
+        <span class="mat-cell maxwidth-20 text-center">
+          <div class="row">
+            <div class="col-xs-6 text-right p-r-0">
+              <span class="p-r-5">{{ material.GlobalMaterial.issuedQty != null ? material.GlobalMaterial.issuedQty : 0 }}</span>
+            </div>
+            <div class="col-xs-6 text-left p-l-0">
+              <span>{{ material.GlobalMaterial.materialUnit }}</span>
+            </div>
+          </div>
+        </span>
+        <span class="mat-cell maxwidth-20 text-center">
+          <div class="row">
+            <div class="col-xs-6 text-right p-r-0">
+              <span class="p-r-5">
+                {{
+                  material.GlobalMaterial.deliveredQty != null
+                    ? material.GlobalMaterial.deliveredQty - (material.GlobalMaterial.issuedQty ? material.GlobalMaterial.issuedQty : 0)
+                    : 0
+                }}</span
+              >
+            </div>
+            <div class="col-xs-6 text-left p-l-0">
+              <span>{{ material.GlobalMaterial.materialUnit }}</span>
+            </div>
+          </div>
+        </span>
       </mat-expansion-panel-header>
       <mat-expansion-panel *ngFor="let project of material.GlobalProject" class="myPanel">
         <mat-expansion-panel-header class="mat-row material-project">
@@ -55,11 +93,25 @@
             </div>
           </span>
           <span class="mat-cell maxwidth-20 text-center">
-            {{ project.ProjectEstimatedQnt }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
-          >
-          <span class="mat-cell maxwidth-20 text-center"
-            >{{ project.Projects.sum }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
-          >
+            <div class="row">
+              <div class="col-xs-6 text-right p-r-0">
+                <span class="p-r-5"> {{ project.ProjectEstimatedQnt }}</span>
+              </div>
+              <div class="col-xs-6 text-left p-l-0">
+                <span>{{ material.GlobalMaterial.materialUnit }}</span>
+              </div>
+            </div>
+          </span>
+          <span class="mat-cell maxwidth-20 text-center">
+            <div class="row">
+              <div class="col-xs-6 text-right p-r-0">
+                <span class="p-r-5"> {{ project.Projects.sum }}</span>
+              </div>
+              <div class="col-xs-6 text-left p-l-0">
+                <span>{{ material.GlobalMaterial.materialUnit }}</span>
+              </div>
+            </div>
+          </span>
           <span class="mat-cell maxwidth-20 text-center">{{ project.Projects.nearDueDate | date: "dd MMM yyy" }}</span>
           <span class="mat-cell maxwidth-20 text-center"></span>
           <span class="mat-cell maxwidth-20 text-center"></span>
@@ -69,9 +121,16 @@
           <mat-expansion-panel-header class="mat-row material-project-details">
             <span class="mat-cell maxwidth-20 text-center"></span>
             <span class="mat-cell maxwidth-20 text-center"></span>
-            <span class="mat-cell maxwidth-20 text-center"
-              >{{ indentMaterial.quantity }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
-            >
+            <span class="mat-cell maxwidth-20 text-center">
+              <div class="row">
+                <div class="col-xs-6 text-right p-r-0">
+                  <span class="p-r-5"> {{ indentMaterial.quantity }}</span>
+                </div>
+                <div class="col-xs-6 text-left p-l-0">
+                  <span>{{ material.GlobalMaterial.materialUnit }}</span>
+                </div>
+              </div>
+            </span>
             <span class="mat-cell maxwidth-20 text-center">{{ indentMaterial.dueDate | date: "dd MMM yyy" }}</span>
             <span class="mat-cell maxwidth-20 text-center"></span>
             <span class="mat-cell maxwidth-20 text-center"></span>
