--- a/src/app/features/reports/ctc-report/ctc-report.component.html
+++ b/src/app/features/reports/ctc-report/ctc-report.component.html
@@ -1,4 +1,4 @@
-<div class="page-start-point changeWidth mt-5 pt-4">
+<div class="page-start-point changeWidth mt-5 pt-4 ctc-report">
   <form *ngIf="allProjects" [formGroup]="form">
     <div class="row" class="users-dashboard p-b-20 min-height parent report">
       <!-- In case of WEB View - design for search Projects, Generate Report and amount  -->
@@ -32,19 +32,24 @@
                 src="../../../../assets/images/download-po.png" /></a>
           </div>
 
-          <!------ Generate Report ------>
-          <button mat-raised-button class="main-background-color main-button color-white demo-title cursor-pointer">
+          <!------ Generate Report (will use later) ------>
+          <!-- <button mat-raised-button class="main-background-color main-button color-white demo-title cursor-pointer">
             Generate Report
-          </button>
+          </button> -->
+
+
+          <!------ Show Amount Field ------>
+          <div *ngIf="allProjectsData" class="show-amount-dropdown text-semi-bold main-color font-size-vary-grn cursor-pointer" #triggerBtn [matMenuTriggerFor]="amount">
+            show amount
+          </div>
         </div>
 
-        <!------ Show Amount Field ------>
-        <div class="col-md-12 add-project-btn display-flex justify-content-flex-end showResponsiveReport">
+        <!-- <div class="col-md-12 add-project-btn display-flex justify-content-flex-end showResponsiveReport">
           <div class="show-amount text-semi-bold main-color font-size-vary-grn cursor-pointer" #triggerBtn
             [matMenuTriggerFor]="amount">
             show amount
           </div>
-        </div>
+        </div> -->
       </div>
 
       <div class="row justify-content-flex-end">
@@ -58,8 +63,97 @@
         </div>
       </div>
 
+      <!-- table For Showing Reports-->
+      <ng-container *ngIf="allProjectsData?.length; else noDataAvailable">
+        <div class="reportTablePo">
+          <p class="fontsize-14-px p-b-0 p-t-10 mb-2">*Conversion Rate = {{ currency }}</p>
+          <table class="report-table">
+            <tr matSort class="mat-elevation-z2 mat-header-row ctc-report-header-row">
+              <th class="mat-header-cell material">Materials</th>
+              <th class="mat-header-cell material">Unit</th>
+              <th class="mat-header-cell material">Estimated Amount <br/>
+                <span *ngIf="selectedMenu !== 'Full Figures'">(</span>{{
+                  selectedMenu === "Full Figures" ? "" : selectedMenu
+                }}<span *ngIf="selectedMenu !== 'Full Figures'">)</span>
+              </th>
+              <th class="mat-header-cell material">Awarded Amount <br/>
+                <span *ngIf="selectedMenu !== 'Full Figures'">(</span>{{
+                  selectedMenu === "Full Figures" ? "" : selectedMenu
+                }}<span *ngIf="selectedMenu !== 'Full Figures'">)</span>
+              </th>
+              <th class="mat-header-cell material">Delivered Amount <br/>
+                <span *ngIf="selectedMenu !== 'Full Figures'">(</span>{{
+                  selectedMenu === "Full Figures" ? "" : selectedMenu
+                }}<span *ngIf="selectedMenu !== 'Full Figures'">)</span>
+              </th>
+              <th class="mat-header-cell material">Paid Amount <br/>
+                <span *ngIf="selectedMenu !== 'Full Figures'">(</span>{{
+                  selectedMenu === "Full Figures" ? "" : selectedMenu
+                }}<span *ngIf="selectedMenu !== 'Full Figures'">)</span>
+              </th>
+              <th class="mat-header-cell material">Projected Cost <br/>to Complete <br/>
+                <span *ngIf="selectedMenu !== 'Full Figures'">(</span>{{
+                  selectedMenu === "Full Figures" ? "" : selectedMenu
+                }}<span *ngIf="selectedMenu !== 'Full Figures'">)</span>
+              </th>
+              <th class="mat-header-cell material">Balance Cost <br/>to Complete <br/>
+                <span *ngIf="selectedMenu !== 'Full Figures'">(</span>{{
+                  selectedMenu === "Full Figures" ? "" : selectedMenu
+                }}<span *ngIf="selectedMenu !== 'Full Figures'">)</span>
+              </th>
+            </tr>
+            
+            <mat-accordion *ngFor="let project of allProjectsData">
+              <!-- Project List Data -->
+              <mat-expansion-panel>
+                <mat-expansion-panel-header class="border-row background-projects">
+                  <tr class="material-row backgound-none-important p-r-10">
+                    <td class="mat-cell">{{ project.projectName }}</td>
+                    <td class="mat-cell"></td>
+                    <td class="mat-cell">{{ project.estimatedAmount / this.conversionNumber | number: "1.2-2" }}</td>
+                    <td class="mat-cell">{{ project.awardedAmount / this.conversionNumber | number: "1.2-2" }}</td>
+                    <td class="mat-cell">{{ project.deliveredAmount / this.conversionNumber | number: "1.2-2" }}</td>
+                    <td class="mat-cell">{{ project.paidAmount / this.conversionNumber | number: "1.2-2" }}</td>
+                    <td class="mat-cell">{{ project.projectedCost / this.conversionNumber | number: "1.2-2" }}</td>
+                    <td class="mat-cell">{{ (project.projectedCost - project.deliveredAmount) / this.conversionNumber | number: "1.2-2" }}</td>
+                  </tr>
+                </mat-expansion-panel-header>
+
+                <!-- Material category details of specific project -->
+                <mat-expansion-panel *ngFor="let matCategory of project.materialCategoryDataList">
+                  <mat-expansion-panel-header class="border-row background-category">
+                    <tr class="material-row p-r-10">
+                      <td class="mat-cell">{{ matCategory.materialCategoryName }}</td>
+                      <td class="mat-cell">{{ matCategory.materialUnit }}</td>
+                      <td class="mat-cell">{{ matCategory.estimatedAmount / this.conversionNumber | number: "1.2-2" }}</td>
+                      <td class="mat-cell">{{ matCategory.awardedAmount / this.conversionNumber | number: "1.2-2" }}</td>
+                      <td class="mat-cell">{{ matCategory.deliveredAmount / this.conversionNumber | number: "1.2-2" }}</td>
+                      <td class="mat-cell"></td>
+                      <td class="mat-cell">{{ matCategory.projectedCost / this.conversionNumber | number: "1.2-2" }}</td>
+                      <td class="mat-cell">{{ (matCategory.projectedCost - matCategory.deliveredAmount) / this.conversionNumber | number: "1.2-2" }}</td>
+                    </tr>
+                  </mat-expansion-panel-header>
+
+                  <!-- material details of specific material category -->
+                  <tr class="material-row border-row background-project-list" *ngFor="let material of matCategory.materialCTCDataList">
+                    <td class="mat-cell">{{ material.materialName }}</td>
+                      <td class="mat-cell">{{ material.materialUnit }}</td>
+                      <td class="mat-cell">{{ material.estimatedAmount / this.conversionNumber | number: "1.2-2" }}</td>
+                      <td class="mat-cell">{{ material.awardedAmount / this.conversionNumber | number: "1.2-2" }}</td>
+                      <td class="mat-cell">{{ material.deliveredAmount / this.conversionNumber | number: "1.2-2" }}</td>
+                      <td class="mat-cell"></td>
+                      <td class="mat-cell">{{ material.projectedCTC / this.conversionNumber | number: "1.2-2" }}</td>
+                      <td class="mat-cell">{{ (material.projectedCTC - material.deliveredAmount) / this.conversionNumber | number: "1.2-2" }}</td>
+                  </tr>
+                </mat-expansion-panel>
+              </mat-expansion-panel>
+            </mat-accordion>
+          </table>
+        </div>
+      </ng-container>
+
       <!-- Report Default Image If No data is Present -->
-      <ng-container>
+      <ng-template #noDataAvailable>
         <div class="wrapper-btn-center">
           <div class="report-image">
             <img src="../../../../assets/images/report-main.svg" alt="BuildSupply_Logo" />
@@ -71,87 +165,7 @@
             </div>
           </div>
         </div>
-      </ng-container>
-
-      <!-- table For Showing Reports-->
-      <ng-container *ngIf="projectIds.length">
-        <div class="reportTablePo">
-          <table class="report-table">
-
-            <!-- Total Amount Header -->
-            <tr class="material-row backgound-total-amount">
-              <td class="mat-cell">Total</td>
-              <td class="mat-cell"></td>
-              <td class="mat-cell"></td>
-              <td class="mat-cell"></td>
-              <td class="mat-cell"></td>
-              <td class="mat-cell"></td>
-              <td class="mat-cell"></td>
-              <td class="mat-cell"></td>
-            </tr>
-
-            <tr matSort class="mat-elevation-z2 mat-header-row">
-              <th class="mat-header-cell material">Materials</th>
-              <th class="mat-header-cell material">Unit</th>
-              <th class="mat-header-cell material">Estimated Amount (INR)</th>
-              <th class="mat-header-cell material">Awarded Amount (INR)</th>
-              <th class="mat-header-cell material">Delivered Amount (INR)</th>
-              <th class="mat-header-cell material">Paid Amount (INR)</th>
-              <th class="mat-header-cell material">Projected Cost to Complete (INR)</th>
-              <th class="mat-header-cell material">Balance Cost to Complete (INR)</th>
-            </tr>
-            
-            <mat-accordion>
-              <!-- *ngFor="let supplier of SupplierLiabiltyReportData.supplierReportDataList"x -->
-              <!-- Project Category List -->
-              <mat-expansion-panel>
-                <mat-expansion-panel-header class="border-row background-supplier">
-                  <tr class="material-row backgound-none-important p-r-10">
-                    <td class="mat-cell"></td>
-                    <td class="mat-cell"></td>
-                    <td class="mat-cell"></td>
-                    <td class="mat-cell"></td>
-                    <td class="mat-cell"></td>
-                    <td class="mat-cell"></td>
-                    <td class="mat-cell"></td>
-                    <td class="mat-cell"></td>
-                  </tr>
-                </mat-expansion-panel-header>
-
-                <!-- Project List -->
-                <!-- *ngFor="let project of supplier.projectReportDataList" -->
-                <mat-expansion-panel>
-                  <mat-expansion-panel-header class="border-row background-project">
-                    <tr class="material-row backgound-none-important p-r-10">
-                      <td class="mat-cell"></td>
-                      <td class="mat-cell"></td>
-                      <td class="mat-cell"></td>
-                      <td class="mat-cell"></td>
-                      <td class="mat-cell"></td>
-                      <td class="mat-cell"></td>
-                      <td class="mat-cell"></td>
-                      <td class="mat-cell"></td>
-                    </tr>
-                  </mat-expansion-panel-header>
-
-                  <!-- Project Details Of an Individual Project -->
-                  <!-- *ngFor="let poData of project.purchaseOrderDataList" -->
-                  <tr class="material-row border-row background-project-list">
-                    <td class="mat-cell"></td>
-                    <td class="mat-cell"></td>
-                    <td class="mat-cell"></td>
-                    <td class="mat-cell"></td>
-                    <td class="mat-cell"></td>
-                    <td class="mat-cell"></td>
-                    <td class="mat-cell"></td>
-                    <td class="mat-cell"></td>
-                  </tr>
-                </mat-expansion-panel>
-              </mat-expansion-panel>
-            </mat-accordion>
-          </table>
-        </div>
-      </ng-container>
+      </ng-template>
     </div>
   </form>
 </div>
