--- a/src/app/features/indent/indent-detail/indent-detail.component.html
+++ b/src/app/features/indent/indent-detail/indent-detail.component.html
@@ -7,155 +7,187 @@
       </div>
     </div>
 
-    <ng-container class="user-dts">
-      <mat-expansion-panel class="myPanel" [expanded]="true">
-        <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'">
-          <div class="row">
-            <div class="col-sm-12">
-              <span>Ongoing Purchase Requisition</span>
-            </div>
-          </div>
-        </mat-expansion-panel-header>
-        <div class="add-unique-container mat-elevation-z8">
-          <!-- <div class="col-sm-12"> -->
-          <!-- table structure -->
-          <table mat-table [dataSource]="dataSource1">
-            <!--- Note that these columns can be defined in any order.
+
+    <div class="row">
+
+      <ng-container *ngIf="!isMobile">
+        <div class="col-md-2">
+          <advance-search filterType="indent"></advance-search>
+        </div>
+      </ng-container>
+
+
+      <div class="col-md-10">
+
+        <ng-container *ngIf="allIndents else emptyReports">
+
+          <ng-container class="user-dts">
+            <mat-expansion-panel class="myPanel" [expanded]="true">
+              <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'">
+                <div class="row">
+                  <div class="col-sm-12">
+                    <span>Ongoing Purchase Requisition</span>
+                  </div>
+                </div>
+              </mat-expansion-panel-header>
+              <div class="add-unique-container mat-elevation-z8">
+                <!-- <div class="col-sm-12"> -->
+                <!-- table structure -->
+                <table mat-table [dataSource]="dataSource1">
+                  <!--- Note that these columns can be defined in any order.
                       The actual rendered columns are set as a property on the row definition" -->
 
-            <!-- Position Column -->
-            <ng-container matColumnDef="Indent Number">
-              <th mat-header-cell *matHeaderCellDef>Indent Number</th>
-              <td mat-cell *matCellDef="let element">{{ element.indentId }}</td>
-            </ng-container>
+                  <!-- Position Column -->
+                  <ng-container matColumnDef="Indent Number">
+                    <th mat-header-cell *matHeaderCellDef>Indent Number</th>
+                    <td mat-cell *matCellDef="let element">{{ element.indentId }}</td>
+                  </ng-container>
 
-            <!-- Name Column -->
-            <ng-container matColumnDef="Indented Date">
-              <th mat-header-cell *matHeaderCellDef>Indented Date</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.createdAt | date: "dd-MMM-yyy" }}
-              </td>
-            </ng-container>
+                  <!-- Name Column -->
+                  <ng-container matColumnDef="Indented Date">
+                    <th mat-header-cell *matHeaderCellDef>Indented Date</th>
+                    <td mat-cell *matCellDef="let element">
+                      {{ element.createdAt | date: "dd-MMM-yyy" }}
+                    </td>
+                  </ng-container>
 
-            <!-- Weight Column -->
-            <ng-container matColumnDef="Total No Of Material">
-              <th mat-header-cell *matHeaderCellDef class="text-align-center">Total No Of Material</th>
-              <td mat-cell *matCellDef="let element" class="text-align-center">
-                {{ element.materialCount }}
-              </td>
-            </ng-container>
+                  <!-- Weight Column -->
+                  <ng-container matColumnDef="Total No Of Material">
+                    <th mat-header-cell *matHeaderCellDef class="text-align-center">Total No Of Material</th>
+                    <td mat-cell *matCellDef="let element" class="text-align-center">
+                      {{ element.materialCount }}
+                    </td>
+                  </ng-container>
 
-            <!-- Symbol Column -->
-            <ng-container matColumnDef="Created By">
-              <th mat-header-cell *matHeaderCellDef>Created By</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.createdBy }}
-              </td>
-            </ng-container>
+                  <!-- Symbol Column -->
+                  <ng-container matColumnDef="Created By">
+                    <th mat-header-cell *matHeaderCellDef>Created By</th>
+                    <td mat-cell *matCellDef="let element">
+                      {{ element.createdBy }}
+                    </td>
+                  </ng-container>
 
-            <ng-container matColumnDef="View Indent">
-              <th mat-header-cell *matHeaderCellDef></th>
-              <td mat-cell *matCellDef="let element">
-                <a (click)="viewIndentDetails(element)" class="cursor" style="color: #f47721;">View Indent</a>
-              </td>
-            </ng-container>
+                  <ng-container matColumnDef="View Indent">
+                    <th mat-header-cell *matHeaderCellDef></th>
+                    <td mat-cell *matCellDef="let element">
+                      <a (click)="viewIndentDetails(element)" class="cursor" style="color: #f47721;">View Indent</a>
+                    </td>
+                  </ng-container>
 
-            <!-- <ng-container matColumnDef="Date">
+                  <!-- <ng-container matColumnDef="Date">
                 <th mat-header-cell *matHeaderCellDef>Date</th>
                 <td mat-cell *matCellDef="let element">
                   {{ element.createdAt | date }}
                 </td>
               </ng-container> -->
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-          </table>
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+                </table>
 
-          <!-- end structure -->
-          <!-- </div> -->
-        </div>
-      </mat-expansion-panel>
-    </ng-container>
+                <!-- end structure -->
+                <!-- </div> -->
+              </div>
+            </mat-expansion-panel>
+          </ng-container>
 
-    <!-- <div class="row p-t-10">
-      <div class="col-sm-12">
-        <mat-toolbar>
-          <span>Completed Indent</span>
-        </mat-toolbar>
-      </div>
-    </div> -->
-    <p></p>
-    <ng-container class="user-dts">
-      <mat-expansion-panel class="myPanel" [expanded]="true">
-        <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'">
-          <div class="row">
+          <!-- <div class="row p-t-10">
             <div class="col-sm-12">
-              <span>Completed Purchase Requisition</span>
+              <mat-toolbar>
+                <span>Completed Indent</span>
+              </mat-toolbar>
             </div>
-          </div>
-        </mat-expansion-panel-header>
-        <!-- first table structure -->
-        <div class="add-unique-container mat-elevation-z8">
-          <!-- <div class="col-sm-12"> -->
-          <!-- table structure -->
-          <table mat-table [dataSource]="dataSource2">
-            <!--- Note that these columns can be defined in any order.
+          </div> -->
+          <p></p>
+          <ng-container class="user-dts">
+            <mat-expansion-panel class="myPanel" [expanded]="true">
+              <mat-expansion-panel-header [collapsedHeight]="'48px'" [expandedHeight]="'48px'">
+                <div class="row">
+                  <div class="col-sm-12">
+                    <span>Completed Purchase Requisition</span>
+                  </div>
+                </div>
+              </mat-expansion-panel-header>
+              <!-- first table structure -->
+              <div class="add-unique-container mat-elevation-z8">
+                <!-- <div class="col-sm-12"> -->
+                <!-- table structure -->
+                <table mat-table [dataSource]="dataSource2">
+                  <!--- Note that these columns can be defined in any order.
                           The actual rendered columns are set as a property on the row definition" -->
 
-            <!-- Position Column -->
-            <ng-container matColumnDef="Indent Number">
-              <th mat-header-cell *matHeaderCellDef>Indent Number</th>
-              <td mat-cell *matCellDef="let element">{{ element.indentId }}</td>
-            </ng-container>
+                  <!-- Position Column -->
+                  <ng-container matColumnDef="Indent Number">
+                    <th mat-header-cell *matHeaderCellDef>Indent Number</th>
+                    <td mat-cell *matCellDef="let element">{{ element.indentId }}</td>
+                  </ng-container>
 
-            <!-- Name Column -->
-            <ng-container matColumnDef="Indented Date">
-              <th mat-header-cell *matHeaderCellDef>Indented Date</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.createdAt | date: "dd-MMM-yyy" }}
-              </td>
-            </ng-container>
+                  <!-- Name Column -->
+                  <ng-container matColumnDef="Indented Date">
+                    <th mat-header-cell *matHeaderCellDef>Indented Date</th>
+                    <td mat-cell *matCellDef="let element">
+                      {{ element.createdAt | date: "dd-MMM-yyy" }}
+                    </td>
+                  </ng-container>
 
-            <!-- Weight Column -->
-            <ng-container matColumnDef="Total No Of Material">
-              <th mat-header-cell *matHeaderCellDef class="text-align-center">Total No Of Material</th>
-              <td mat-cell *matCellDef="let element" class="text-align-center">
-                {{ element.materialCount }}
-              </td>
-            </ng-container>
+                  <!-- Weight Column -->
+                  <ng-container matColumnDef="Total No Of Material">
+                    <th mat-header-cell *matHeaderCellDef class="text-align-center">Total No Of Material</th>
+                    <td mat-cell *matCellDef="let element" class="text-align-center">
+                      {{ element.materialCount }}
+                    </td>
+                  </ng-container>
 
-            <!-- Symbol Column -->
-            <ng-container matColumnDef="Created By">
-              <th mat-header-cell *matHeaderCellDef>Created By</th>
-              <td mat-cell *matCellDef="let element">
-                {{ element.createdBy }}
-              </td>
-            </ng-container>
+                  <!-- Symbol Column -->
+                  <ng-container matColumnDef="Created By">
+                    <th mat-header-cell *matHeaderCellDef>Created By</th>
+                    <td mat-cell *matCellDef="let element">
+                      {{ element.createdBy }}
+                    </td>
+                  </ng-container>
 
-            <ng-container matColumnDef="View Indent">
-              <th mat-header-cell *matHeaderCellDef></th>
-              <td mat-cell *matCellDef="let element">
-                <a (click)="viewIndentDetails(element)" class="cursor" style="color: #f47721;">View Indent</a>
-              </td>
-            </ng-container>
+                  <ng-container matColumnDef="View Indent">
+                    <th mat-header-cell *matHeaderCellDef></th>
+                    <td mat-cell *matCellDef="let element">
+                      <a (click)="viewIndentDetails(element)" class="cursor" style="color: #f47721;">View Indent</a>
+                    </td>
+                  </ng-container>
 
-            <!-- <ng-container matColumnDef="Date">
+                  <!-- <ng-container matColumnDef="Date">
                   <th mat-header-cell *matHeaderCellDef>Date</th>
                   <td mat-cell *matCellDef="let element">
                     {{ element.createdAt | date }}
                   </td>
                 </ng-container> -->
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-            <!-- (click)="viewIndentDetails(row)"  -->
-          </table>
+                  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+                  <!-- (click)="viewIndentDetails(row)"  -->
+                </table>
 
-          <!-- end structure -->
-          <!-- </div> -->
-        </div>
-        <!-- end of first structure -->
-      </mat-expansion-panel>
-    </ng-container>
+                <!-- end structure -->
+                <!-- </div> -->
+              </div>
+              <!-- end of first structure -->
+            </mat-expansion-panel>
+          </ng-container>
+
+        </ng-container>
+
+
+        <ng-template #emptyReports>
+          <div class="d-block text-align-center mt-3">
+            <img src="../../../../assets/images/empty-report.svg" alt="empty report">
+            <p class="font-weight-light m-0 pt-3"><strong class="font-weight500">Oops!</strong> You have nothing to see.
+            </p>
+            <p class="font-weight-light m-0 mt-1">Try Again !</p>
+          </div>
+        </ng-template>
+
+      </div>
+
+    </div>
+
+
   </div>
 </div>
