--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -38,11 +38,11 @@
 
     <div class="row">
 
-      <div class="col-md-2">
-
-        <advance-search filterType="po"></advance-search>
-
-      </div>
+      <ng-container *ngIf="!isMobile">
+        <div class="col-md-2">
+          <advance-search filterType="po"></advance-search>
+        </div>
+      </ng-container>
 
       <div class="col-md-10 text-right">
         <!-- Topmost Status -->
