--- a/src/app/features/reports/supplier-liability-report-details/supplier-liability-report-details.component.html
+++ b/src/app/features/reports/supplier-liability-report-details/supplier-liability-report-details.component.html
@@ -146,7 +146,7 @@
             <mat-accordion *ngFor="let supplier of supplierLiabiltyReportData.supplierReportDataList">
               <!-- Supplier List -->
               <mat-expansion-panel>
-                <mat-expansion-panel-header class="border-row background-supplier">
+                <mat-expansion-panel-header class="border-row background-supplier background-projects">
                   <tr class="material-row backgound-none-important p-r-10">
                     <td class="mat-cell">{{ supplier.supplierName }}</td>
                     <td class="mat-cell">{{ supplier.totalPoAmount / this.conversionNumber | number: "1.2-2" }}</td>
@@ -157,7 +157,7 @@
                 </mat-expansion-panel-header>
                 <!-- Project List -->
                 <mat-expansion-panel *ngFor="let project of supplier.projectReportDataList">
-                  <mat-expansion-panel-header class="border-row background-project">
+                  <mat-expansion-panel-header class="border-row background-category">
                     <tr class="material-row backgound-none-important p-r-10">
                       <td class="mat-cell">{{ project.projectName }}</td>
                       <td class="mat-cell">{{ project.totalPoAmount / this.conversionNumber | number: "1.2-2" }}</td>
